fix: Checkout flow UI issues on mobile

--- a/src/features/Cart/cart.module.styl
+++ b/src/features/Cart/cart.module.styl
@@ -98,6 +98,8 @@ $cell-size = (100 - $cell-size-first) * .33
   $padding-sm(,,,0)
   border-bottom none
   max-width $cell-size
+  +$below(md)
+    padding-right 10px
 
 .checkout .button
   $padding-sm()
